--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Setup .NET 6
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.100-alpha.1.20472.11'
+          # dotnet-version: '6.0.100-alpha.1.20472.11'
+          dotnet-version: '3.0.0'
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
